Move fzf into separate role

--- a/roles/fzf/tasks/main.yml
+++ b/roles/fzf/tasks/main.yml
@@ -15,6 +15,6 @@
 
 - name: fzf // Add bash config
   ansible.builtin.copy:
-    src: bash/fzf.bash
+    src: fzf.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/fzf.bash"
 
