--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -1,24 +1,24 @@
-- name: bashrc // Clone config
+- name: Clone config
   ansible.builtin.git:
     repo: "https://github.com/ll-nick/bash-config"
     dest: "{{ ansible_env.HOME }}/.config/bash"
     force: "true"
 
-- name: bashrc // Create bashrc symlink
+- name: Create bashrc symlink
   ansible.builtin.file:
     src:  "{{ ansible_env.HOME }}/.config/bash/.bashrc"
     dest: "{{ ansible_env.HOME }}/.bashrc"
     state: link
     force: true
 
-- name: bashrc // Create .profile symlink
+- name: Create .profile symlink
   ansible.builtin.file:
     src:  "{{ ansible_env.HOME }}/.config/bash/.bash_profile"
     dest: "{{ ansible_env.HOME }}/.profile"
     state: link
     force: true
 
-- name: bashrc // Create .bash_profile symlink
+- name: Create .bash_profile symlink
   ansible.builtin.file:
     src:  "{{ ansible_env.HOME }}/.config/bash/.bash_profile"
     dest: "{{ ansible_env.HOME }}/.bash_profile"
