--- a/roles/nerdfont/tasks/main.yml
+++ b/roles/nerdfont/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: Nerdfont // Ensure Fonts Directory
+- name: Ensure Fonts Directory
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/.local/share/fonts"
     state: directory
 
-- name: Nerdfont // Install fontconfig
+- name: Install fontconfig
   become: true
   tags: [never, privileged]
   ansible.builtin.package:
@@ -11,7 +11,7 @@
       - fontconfig
     state: present
 
-- name: Nerdfont // Check Font Exists
+- name: Check Font Exists
   ansible.builtin.shell: "fc-list | grep -q JetBrainsMono"
   register: font_exists
   changed_when: false
@@ -19,14 +19,14 @@
 
 - when: font_exists.rc != 0
   block:
-    - name: Nerdfont // Install unzip
+    - name: Install unzip
       become: true
       tags: [never, privileged]
       ansible.builtin.package:
         name: unzip
         state: present
 
-    - name: Nerdfont // Download and Extract
+    - name: Download and Extract
       ansible.builtin.unarchive:
         src: https://github.com/ryanoasis/nerd-fonts/releases/download/v3.1.1/JetBrainsMono.zip
         dest: "{{ ansible_env.HOME }}/.local/share/fonts/"
