--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: starship // Install dependencies
+- name: Install dependencies
   become: true
   tags: [never, privileged]
   ansible.builtin.package:
@@ -6,26 +6,26 @@
       - curl
     state: present
 
-- name: Starship // Check Install
+- name: Check Install
   shell:
     cmd: starship --version
   register: starship_install_check
   changed_when: false
   ignore_errors: true
 
-- name: Starship // Install
+- name: Install
   shell:
     cmd: "curl -sS https://starship.rs/install.sh | sh -s -- --bin-dir '{{ ansible_env.HOME }}/.local/bin' --yes"
   when: starship_install_check.rc != 0
 
-- name: Starship // Clone Config
+- name: Clone Config
   ansible.builtin.git:
     repo: "https://github.com/ll-nick/starship-config.git"
     dest: "{{ ansible_env.HOME }}/.config/starship"
     force: "true"
 
-- name: Starship // Add bash config
+- name: Add bash config
   ansible.builtin.copy:
-    src: bash/prompt.bash
+    src: prompt.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/prompt.bash"
 
