--- a/roles/thefuck/tasks/main.yml
+++ b/roles/thefuck/tasks/main.yml
@@ -1,10 +1,10 @@
-- name: thefuck // Install
+- name: Install
   community.general.pipx:
     name: thefuck
     executable: "{{ ansible_env.HOME }}/.local/venvs/pipx/bin/pipx"
 
-- name: thefuck // Add bash config
+- name: Add bash config
   ansible.builtin.copy:
-    src: bash/thefuck.bash
+    src: thefuck.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/thefuck.bash"
 
