--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: update-all // Install script
+- name: Install script
   ansible.builtin.copy:
-    src: scripts/update-all
+    src: update-all
     dest: "{{ ansible_env.HOME }}/.local/bin/update-all"
     mode: "0755"
