--- a/roles/lazygit/tasks/main.yml
+++ b/roles/lazygit/tasks/main.yml
@@ -16,6 +16,8 @@
   ansible.builtin.shell: command -v lazygit
   register: lazygit_installed
   ignore_errors: true
+  changed_when: false
+  failed_when: false
 
 - name: Check installed version
   when: lazygit_installed.rc == 0
