--- a/roles/leadr/tasks/main.yml
+++ b/roles/leadr/tasks/main.yml
@@ -16,6 +16,8 @@
   ansible.builtin.shell: command -v leadr
   register: leadr_installed
   ignore_errors: true
+  changed_when: false
+  failed_when: false
 
 - name: Check installed version
   when: leadr_installed.rc == 0
