Add a custom stdout callback

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 inventory = hosts.ini
 roles_path = roles/
+callback_plugins = callback_plugins/
+stdout_callback = pretty_output
+bin_ansible_callbacks = True
