Flatten structure of mrt role and add to full.yml

--- a/playbooks/full.yml
+++ b/playbooks/full.yml
@@ -23,6 +23,7 @@
     - role: lazygit
     - role: leadr
     - role: locale
+    - role: mrt
     - role: neovim
     - role: nerdfont
     - role: nodejs
