--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Clone config
   ansible.builtin.git:
-    repo: "https://github.com/ll-nick/bash-config"
+    repo: "{{ github_prefix }}ll-nick/bash-config"
     dest: "{{ ansible_env.HOME }}/.config/bash"
     force: "true"
 
