--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Clone Config
   ansible.builtin.git:
-    repo: "https://github.com/ll-nick/starship-config.git"
+    repo: "{{ github_prefix }}ll-nick/starship-config.git"
     dest: "{{ ansible_env.HOME }}/.config/starship"
     force: "true"
 
