--- a/roles/kitty/tasks/main.yml
+++ b/roles/kitty/tasks/main.yml
@@ -80,7 +80,7 @@
 
 - name: Clone Config
   ansible.builtin.git:
-    repo: "https://github.com/ll-nick/kitty-config.git"
+    repo: "{{ github_prefix }}ll-nick/kitty-config.git"
     dest: "{{ ansible_env.HOME }}/.config/kitty"
     force: "true"
 
