--- a/roles/mrt/tasks/main.yml
+++ b/roles/mrt/tasks/main.yml
@@ -13,7 +13,7 @@
   block:
     - name: Clone rossrc
       ansible.builtin.git:
-        repo: "https://github.com/ll-nick/rossrc.git"
+        repo: "{{ github_prefix }}ll-nick/rossrc.git"
         dest: "{{ ansible_env.HOME }}/.rossrc"
         force: "true"
 
