Switch from z to zoxide

--- a/local.yml
+++ b/local.yml
@@ -62,7 +62,7 @@
     - role: thefuck
     - role: tmux
     - role: update
-    - role: z
+    - role: zoxide
 
     - role: gnome
       when: has_display
