Change cursor style depending on vi mode in bash

--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -25,3 +25,7 @@
     state: link
     force: true
 
+- name: Add inputrc
+  ansible.builtin.copy:
+    src: inputrc
+    dest: "{{ ansible_env.HOME }}/.inputrc"
