Install zoxide via mise

--- a/roles/zoxide/tasks/main.yml
+++ b/roles/zoxide/tasks/main.yml
@@ -1,23 +1,8 @@
-- name: Install dependencies
-  become: true
-  tags: [never, privileged]
-  ansible.builtin.package:
-    name:
-      - curl
-    state: present
-
-- name: Check Install
-  shell:
-    cmd: zoxide --version
-  register: zoxide_install_check
-  changed_when: false
-  failed_when: false
-  ignore_errors: true
-
 - name: Install
-  shell:
-    cmd: "curl -sSfL https://raw.githubusercontent.com/ajeetdsouza/zoxide/main/install.sh | sh"
-  when: starship_install_check.rc != 0
+  ansible.builtin.shell: |
+    {{ ansible_env.HOME }}/.local/bin/mise use --global zoxide
+  args:
+    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/zoxide"
 
 - name: Add bash config
   ansible.builtin.copy:
