--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -1,10 +1,8 @@
 - name: Install psutil
-  become: true
-  tags: [never, privileged]
-  ansible.builtin.package:
-    name:
-      - python3-psutil
+  ansible.builtin.pip:
+    name: psutil
     state: present
+    executable: python
 
 - name: Ensure icons Directory at .icons
   ansible.builtin.file:
