Don't use pip module as that does not seem to work for mise installed python

--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -1,8 +1,9 @@
-- name: Install psutil
-  ansible.builtin.pip:
-    name: psutil
-    state: present
-    executable: python
+- name: Ensure psutil is installed
+  ansible.builtin.shell: |
+    set -e
+    if ! python -c 'import psutil' 2>/dev/null; then
+      python -m pip install --upgrade psutil
+    fi
 
 - name: Ensure icons Directory at .icons
   ansible.builtin.file:
