--- a/roles/leadr/tasks/main.yml
+++ b/roles/leadr/tasks/main.yml
@@ -30,7 +30,7 @@
   register: leadr_installed_version
 
 - name: Install latest if needed
-  when: leadr_installed.rc != 0 or leadr_installed_version.stdout is version(leadr_latest_release_version, "!=")
+  when: leadr_installed.rc != 0 or (leadr_installed.rc == 0 and leadr_installed_version.stdout is version(leadr_latest_release_version, "!="))
   ansible.builtin.get_url:
     url: "https://github.com/ll-nick/leadr/releases/download/v{{ leadr_latest_release_version }}/leadr-v{{ leadr_latest_release_version }}-x86_64-unknown-linux-musl"
     dest: "{{ ansible_env.HOME }}/.local/bin/leadr"
