--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install
   ansible.builtin.shell: |
-    {{ ansible_env.HOME }}/.local/bin/mise use --global node
+    MISE_NODE_COMPILE=false {{ ansible_env.HOME }}/.local/bin/mise use --global node
   args:
     creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/node"
 
