--- a/roles/kitty/tasks/install.yml
+++ b/roles/kitty/tasks/install.yml
@@ -3,51 +3,31 @@
     path: "{{ ansible_env.HOME }}/.local/bin"
     state: directory
 
-- name: Get latest release data
-  ansible.builtin.uri:
-    url: https://api.github.com/repos/kovidgoyal/kitty/releases/latest
-  register: kitty_latest_release
-
-- name: Set latest version
-  set_fact:
-    kitty_latest_release_version: "{{ kitty_latest_release.json.tag_name | regex_replace('^v', '') }}"
-
-- name: Execute installer script
-  ansible.builtin.shell: curl -L https://sw.kovidgoyal.net/kitty/installer.sh | sh /dev/stdin launch=n
+- name: Install
+  ansible.builtin.shell: |
+    {{ ansible_env.HOME }}/.local/bin/mise use --global github:kovidgoyal/kitty
   args:
-    executable: /bin/bash
-
-- name: Create symbolic link for kitty
-  ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/.local/kitty.app/bin/kitty"
-    dest: "{{ ansible_env.HOME }}/.local/bin/kitty"
-    state: link
-
-- name: Create symbolic link for kitten
-  ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/.local/kitty.app/bin/kitten"
-    dest: "{{ ansible_env.HOME }}/.local/bin/kitten"
-    state: link
+    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/github-kovidgoyal-kitty"
 
 - name: Copy kitty.desktop to appropriate location
   ansible.builtin.copy:
-    src: "{{ ansible_env.HOME }}/.local/kitty.app/share/applications/kitty.desktop"
+    src: "{{ ansible_env.HOME }}/.local/share/mise/installs/github-kovidgoyal-kitty/latest/share/applications/kitty.desktop"
     dest: "{{ ansible_env.HOME }}/.local/share/applications/kitty.desktop"
 
 - name: Copy kitty-open.desktop to appropriate location
   ansible.builtin.copy:
-    src: "{{ ansible_env.HOME }}/.local/kitty.app/share/applications/kitty-open.desktop"
+    src: "{{ ansible_env.HOME }}/.local/share/mise/installs/github-kovidgoyal-kitty/latest/share/applications/kitty-open.desktop"
     dest: "{{ ansible_env.HOME }}/.local/share/applications/kitty-open.desktop"
 
 - name: Update Icon path in .desktop files
   ansible.builtin.shell:
-    cmd: "sed -i 's|Icon=kitty|Icon={{ ansible_env.HOME }}/.local/kitty.app/share/icons/hicolor/256x256/apps/kitty.png|g' ~/.local/share/applications/kitty*.desktop"
+    cmd: "sed -i 's|Icon=kitty|Icon={{ ansible_env.HOME }}/.local/share/mise/installs/github-kovidgoyal-kitty/latest/share/icons/hicolor/256x256/apps/kitty.png|g' ~/.local/share/applications/kitty*.desktop"
   args:
     executable: /bin/bash
 
 - name: Update Exec path in .desktop files
   ansible.builtin.shell:
-    cmd: "sed -i 's|Exec=kitty|Exec={{ ansible_env.HOME }}/.local/kitty.app/bin/kitty|g' ~/.local/share/applications/kitty*.desktop"
+    cmd: "sed -i 's|Exec=kitty|Exec={{ ansible_env.HOME }}/.local/share/mise/installs/github-kovidgoyal-kitty/latest/bin/kitty|g' ~/.local/share/applications/kitty*.desktop"
   args:
     executable: /bin/bash
 
